Bug 455042 - NeoChat roomlist doesn't sort properly on application startup
Summary: NeoChat roomlist doesn't sort properly on application startup
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
: 462355 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-08 17:57 UTC by Jan Bidler
Modified: 2023-05-15 19:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bidler 2022-06-08 17:57:52 UTC
SUMMARY
When the application is first opened, it tries to sort rooms (including but not limited to) based on the date of their last activity. However, during that time, NC doesn't actually "have" any sort of activity data, the sort essentially random.

STEPS TO REPRODUCE
1. Open NeoChat (emptying cache before might help, not sure)

OBSERVED RESULT
The rooms won't actually be sorted by the date of their last activity.

EXPECTED RESULT
The rooms should be sorted by the date of their last activity

SOFTWARE/OS VERSIONS
Windows: 10 21H1
Linux: Arch Linux
NeoChat Version: 22.04
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.2
Comment 1 Tobias Fella 2022-11-28 15:18:29 UTC
*** Bug 462355 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2023-05-15 18:06:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/998
Comment 3 James Graham 2023-05-15 19:11:48 UTC
Git commit c63f1f045236c0de6a144e3334ccea2473d3724a by James Graham.
Committed on 15/05/2023 at 19:11.
Pushed by nvrwhere into branch 'master'.

Cache last event

Cache the last room event so that the room list can be sorted on startup

Fixes network/neochat#88 \

M  +44   -0    src/neochatroom.cpp
M  +4    -0    src/neochatroom.h

https://invent.kde.org/network/neochat/commit/c63f1f045236c0de6a144e3334ccea2473d3724a