Cache last event

Cache the last room event so that the room list can be sorted on startup

Fixes network/neochat#88 \
BUG: 455042